--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=drash_rentals
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,10 +29,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=587
-MAIL_USERNAME=836d6ddd804397
-MAIL_PASSWORD=68897ff1e67e41
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=4b8c565e646807
+MAIL_PASSWORD=15308757631838
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="no-reply@rentals.drash.co.ke"
 MAIL_FROM_NAME="${APP_NAME}"
